## Make 最低版本号要求
cmake_minimum_required (VERSION 2.8)
## 项目信息
project (eloop_test)
include(${PROJECT_SOURCE_DIR}/../eloop.cmake)

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    message("this operation platform is linux/unix")
	message(${TEST_SRC})
    # 查找当前目录下的所有源文件
    add_subdirectory(${TEST_SRC}/Test_async)
	add_subdirectory(${TEST_SRC}/Test_DNS)
	add_subdirectory(${TEST_SRC}/Test_file)
	add_subdirectory(${TEST_SRC}/Test_idle)
	add_subdirectory(${TEST_SRC}/Test_lock)
	add_subdirectory(${TEST_SRC}/Test_pipeClient)	
	add_subdirectory(${TEST_SRC}/Test_pipeServer)
	add_subdirectory(${TEST_SRC}/Test_tcpClient)
	add_subdirectory(${TEST_SRC}/Test_TcpServer)
	add_subdirectory(${TEST_SRC}/Test_ThreadPool)
	add_subdirectory(${TEST_SRC}/Test_timer)
	add_subdirectory(${TEST_SRC}/Test_udpClient)
	add_subdirectory(${TEST_SRC}/Test_udpServer)
	add_subdirectory(${TEST_SRC}/udpsend)
else()
    message("this operation platform is windows")
    # 并将名称保存到 DIR_SRCS 变量
    add_subdirectory(${TEST_SRC}/Test_async)
	add_subdirectory(${TEST_SRC}/Test_DNS)
	add_subdirectory(${TEST_SRC}/Test_file)
	add_subdirectory(${TEST_SRC}/Test_idle)
	add_subdirectory(${TEST_SRC}/Test_lock)
	add_subdirectory(${TEST_SRC}/Test_pipeClient)	
	add_subdirectory(${TEST_SRC}/Test_pipeServer)
	add_subdirectory(${TEST_SRC}/Test_tcpClient)
	add_subdirectory(${TEST_SRC}/Test_TcpServer)
	add_subdirectory(${TEST_SRC}/Test_ThreadPool)
	add_subdirectory(${TEST_SRC}/Test_timer)
	add_subdirectory(${TEST_SRC}/Test_udpClient)
	add_subdirectory(${TEST_SRC}/Test_udpServer)
	add_subdirectory(${TEST_SRC}/udpsend)
endif()

